v12/fixtures/ast/errors/implicit_generic_redeclaration/source.able
fn wrap(value: T) -> T {
  struct T {
    value: i32
  }
  value;
}
